Fix grid on small BPs by adding max-width: 100%; to o-Grid-cell (The layout was breaking on small viewports on the cover component)

--- a/src/stylesheets/components/objects/grid/_object.grid.definition.scss
+++ b/src/stylesheets/components/objects/grid/_object.grid.definition.scss
@@ -55,6 +55,7 @@ $grid-gutter-xl: $g-spacer-xl;
 
 .o-Grid-cell {
   flex: 1 1 auto;
+  max-width: 100%;
 }
 
 .o-Grid--flexCells > .o-Grid-cell {
